Add livestream listing, FAQ and make livestream dialog open using url query params
