# openapi/airportslive-data.yaml
@@ -120,14 +120,6 @@ components:
           type: string
         iata:
           type: string
-        name:
-          type: string
-        lat:
-          type: number
-          format: double
-        lon:
-          type: number
-          format: double
         videoId:
           type: string
         #        youtubeURL:
@@ -137,6 +129,8 @@ components:
         description:
           type: string
         channelTitle:
+          type: string
+        channelId:
           type: string
     #        thumbnails:
     #          type: array
